v4_0_36
	- Fix error status of recursive listing of empty root directory
	- If recursive listing, also show matched files at level one
	- Use "seekless" reads & write internally, where possible
	- Text mode conversion refactoring
	- Misc refactoring

v4_0_35
	- Fix cluster padding at end of file in batch mode, and add
	  comments about what happens here

v4_0_34
	- Fix mcopy -s issue

v4_0_33
	- Fix support for partitions (broken in 4.0.30)
	- Portability fixes for Solaris 10 and 11
	- General simplification of configure script, and largefile handling
	- Tested and fixed for platforms *without* largefile support
	- In cases where lseek works with 32-bit offsets, prefer
          lseek64 over llseek
	- Fixed floppy sector size handling on platforms that are not
          Linux
	- Added support for image files on command line to mcat

v4_0_32
	- Simplify algorithm that choses filesystem parameters for
          format, and align it more closely with what Win7 does
	- Fix mformatting XDF when XDF not explicitly specified on
          mformat command line
	- easier way to enter sizes on mformat command line (mformat -C -T
	  1440K)
	- For small sizes, mformat assumes floppy geometries (heads 1 or 2,
          tracks 40 or 80)
	- Handle attempts to mformat too small filesystems more gracefully
	- Enable minfo to print out additional mformat command line
	  parameters, if the present filesystem uses non-default
	  values for these
	- minfo no longer prints bigsect if smallsect is set
	- for remap filter, error when trying to write non-zero data
          to unmapped sectors
	- Fix misc compilation warnings occuring when disabling
          certain features (largefiles, raw-term)

v4_0_31
	- Move Linux-specific block device sizing code into
          linux-specific section of devices.c
	- Error messages for all failure cases on fs_init failure
	- Fix compilation without XDF support (OpenImage signature)
	- Fix polarity of format_xdf command-line parameter of mformat