@@ -167,7 +167,7 @@ doesn't follow MS-DOS conventions, but which is more user-friendly.
 
 Most mtools commands allow options that instruct them how to handle file
 name clashes. @xref{name clashes}, for more details on these. All
-commands accept the @code{-V} flags which prints the version, and most
+commands accept the @code{-V} flag which prints the version, and most
 accept the @code{-v} flag, which switches on verbose mode. In verbose
 mode, these commands print out the name of the MS-DOS files upon which
 they act, unless stated otherwise. @xref{Commands}, for a description of
@@ -1217,7 +1217,6 @@ description of those.
 * mbadblocks::        tests a floppy disk, and marks the bad blocks in the FAT
 * mcat::              same as cat. Only useful with floppyd.
 * mcd::               change MS-DOS directory
-* mclasserase::       erase memory card
 * mcopy::             copy MS-DOS files to/from Unix
 * mdel::              delete an MS-DOS file
 * mdeltree::          recursively delete an MS-DOS directory
@@ -1509,7 +1508,7 @@ stdin and writes it to the given device.
 command, it will happily destroy any data written before on the
 disk without warning!
 
-@node mcd, mclasserase, mcat, Commands
+@node mcd, mcopy, mcat, Commands
 @section Mcd
 @pindex mcd
 @cindex Directory (changing)
@@ -1539,38 +1538,7 @@ if the file is more than 6 hours old.
 Unlike MS-DOS versions of @code{CD}, @code{mcd} can be used to change to
 another device. It may be wise to remove old @file{.mcwd} files at logout.
 
-@node mclasserase, mcopy, mcd, Commands
-@section Mclasserase
-@pindex mclasserase
-@cindex Memory Card
-@cindex Physically erase
-
-The @code{mclasserase} command is used to wipe memory cards by
-overwriting it three times: first with @code{0xff}, then with
-@code{0x00}, then with @code{0xff} again. The command uses the following
-syntax:
-
-@example
-@code{mclasserase} [@code{-d}] @var{msdosdrive}
-@end example
-
-MS-DOS drive is optional, if none is specified, use @code{A:}. If more than
-one drive are specified, all but the last are ignored.
-
-@code{Mclasserase} accepts the following command line options:
-
-@table @code
-@item d
-Stop after each erase cycle, for testing purposes
-@item p
-Not yet implemented
-@end table
-
-
-@code{Mclasserase} returns 0 on success or -1 on failure.
-
-
-@node mcopy, mdel, mclasserase, Commands
+@node mcopy, mdel, mcd, Commands
 @section Mcopy
 @pindex mcopy
 @cindex Reading MS-DOS files
